# utokyo_aerospace_fea_ml

./: .gitignore  CLAUDE.md  README.md  environment.yml  requirements.txt
cpp/inference/: CMakeLists.txt  czm_surrogate.cpp  czm_surrogate.h
cpp/preprocessor/: CMakeLists.txt  preprocessor.cpp  preprocessor.h
models/: __init__.py  baseline_ann.py  enhanced_ann.py  enhanced_ann_r2.py  enhanced_ann_r3.py  lstm_model.py  train.py
notebooks/: 01_eda.ipynb  02_model_comparison.ipynb
pipeline/: __init__.py  config.py  dataset.py  export.py  ingest.py  preprocess.py  split.py  weights.py
scripts/: run_pipeline.py  train_model.py  train_rounds.py
tests/: test_models.py  test_pipeline.py
